--- a/heat_equation/pinn_to_solve_heat_equation.ipynb
+++ b/heat_equation/pinn_to_solve_heat_equation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9ba3b39d-3f3f-4e9c-b516-cb32aa491758",
    "metadata": {},
    "outputs": [
@@ -30,6 +30,8 @@
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
+    "\n",
+    "# Dan is an engineer.\n",
     "\n",
     "# Define the PINN model\n",
     "class PINN(tf.keras.Model):\n",
